test/regress/kind/nra/valid/djaballah_chaputot_kieffer_boussou_2015_ex1.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:49 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Bool)
   (v2 Real)
   (v3 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (<= (+  (*  (+  v2 (/ 5 4)) (+  v2 (/ 5 4))) (*  (+  v3 (- (/ 5 4))) (+  v3 (- (/ 5 4))))) (/ 1 20)))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (and (or  (and (=  (+  (*  3 v2) (+  v3 (*  (- 2) v2'))) 0) (=  (+  (*  4 v3) (+  (*  2 (*  v2 v3)) (+  (*  (- 1) (*  v3 v3)) (*  (- 4) v3')))) 0)) v1) (not v1)))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (not (<= (+  (*  (+  v2 (/ 5 2)) (+  v2 (/ 5 2))) (*  (+  v3 (- (/ 4 5))) (+  v3 (- (/ 4 5))))) (/ 1 20)))
)
