test/regress/kind/nra/invalid/sas13-floatitp-test3.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:52 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Bool)
   (v2 Bool)
   (v3 Bool)
   (v4 Real)
   (v5 Real)
   (v6 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (and (not v1) (and (not v2) (not v3))))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (or  (and (and (and (not v1) (and v2 v3)) (and (and v3' v2') (not v1'))) (and (=  v4 v4') (and (=  v5 v5') (=  v6 v6')))) (or  (or  (and (and (and v1' (and (not v3') (not v2'))) (and (not v1) (and (not v2) v3))) (and (and (=  v4 v4') (and (=  v5 v5') (=  v6 v6'))) (=  (+  (*  840 (*  v5 (*  v5 v5))) (+  (*  (- 42) (*  v5 (*  v5 (*  v5 (*  v5 v5))))) (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 v5)))))))) 0))) (or  (and (and (and (not v1) (and (not v2) v3)) (and (not v1') (and v2' (not v3')))) (and (=  (+  (*  840 (*  v5 (*  v5 v5))) (+  (*  (- 42) (*  v5 (*  v5 (*  v5 (*  v5 v5))))) (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 v5)))))))) 0) (and (and (=  v4 v4') (and (=  v5 v5') (=  v6 v6'))) (not (<= 5 v4))))) (or  (and (and (and (not v1) (and (not v2) v3)) (and (not v1') (and v3' (not v2')))) (and (and (and (=  (+  v4 (*  (- 1) v4')) (- 1)) (and (=  v6 v6') (=  (+  v5 (+  (*  (- 1) v5') (*  (- 1) v6))) 0))) (or  (=  v6 (/ 1 10000)) (=  v6 (/ 1 20000)))) (not (=  (+  (*  840 (*  v5 (*  v5 v5))) (+  (*  (- 42) (*  v5 (*  v5 (*  v5 (*  v5 v5))))) (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 v5)))))))) 0)))) (and (and (and (and v3' v2') (not v1')) (and (not v1) (and (not v2) v3))) (and (not (=  (+  (*  840 (*  v5 (*  v5 v5))) (+  (*  (- 42) (*  v5 (*  v5 (*  v5 (*  v5 v5))))) (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 (*  v5 v5)))))))) 0)) (and (or  (=  v6 (/ 1 10000)) (=  v6 (/ 1 20000))) (and (and (=  (+  v4 (*  (- 1) v4')) (- 1)) (and (=  v6 v6') (=  (+  v5 (+  (*  (- 1) v5') (*  (- 1) v6))) 0))) (<= 9 v4)))))))) (or  (and (and (=  v4 v4') (and (=  v5 v5') (=  v6 v6'))) (and (and (not v1') (and v2' (not v3'))) (and (not v1) (and v2 (not v3))))) (and (and (and (not v1) (and (not v2) (not v3))) (and (not v1') (and v3' (not v2')))) (and (and (and (=  v5 v5') (=  v6 v6')) (=  v4' 0)) (=  v5 (/ 1 1000))))))))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (not (or  (and (not v1) (and v2 v3)) (and (not v1) (and v2 (not v3)))))
)
